add click event

--- a/lib/blocks_web/live/demo.html.heex
+++ b/lib/blocks_web/live/demo.html.heex
@@ -1,5 +1,5 @@
 <h1>From a template!</h1>
 
-<Blocks.Components.Button.button>
+<Blocks.Components.Button.button :if={@show} phx-click="click">
   I am a button that is using Tailwind & Preline!
 </Blocks.Components.Button.button>
