--- a/lib/mbta_metro_web/layouts/root.html.heex
+++ b/lib/mbta_metro_web/layouts/root.html.heex
@@ -8,5 +8,7 @@
   </head>
   <body>
     <%= @inner_content %>
+
+    <script src="./node_modules/preline/dist/preline.js"></script>
   </body>
 </html>
