--- a/lib/mbta_metro_web/live/demo.html.heex
+++ b/lib/mbta_metro_web/live/demo.html.heex
@@ -1,5 +1,5 @@
-<h1>Not from a template...</h1>
+<h1>From a template...</h1>
 
-<MbtaMetro.Components.Button.button :if={@show} phx-click="click">
+<.button :if={@show} phx-click="click">
   I am a button that is using Tailwind & Preline!
-</MbtaMetro.Components.Button.button>
+</.button>
