--- a/lib/mbta_metro_web/live/demo.html.heex
+++ b/lib/mbta_metro_web/live/demo.html.heex
@@ -3,3 +3,19 @@
 <.button :if={@show} phx-click="click">
   I am a button that is using Tailwind & Preline!
 </.button>
+
+<hr /> Simple checkbox input
+<.input type="checkbox" name="download" value="yes" label="Allow downloads" />
+
+<hr /> Simple radio inputs <.input id="0" type="radio" name="direction" value="0" label="Up" />
+<.input id="1" type="radio" name="direction" value="1" label="Down" />
+
+<hr /> Select input
+<.input name="size" type="select" options={["S", "M"]} prompt="Hat size" value={nil} />
+<hr /> Textarea input
+<.input
+  name="essay"
+  type="textarea"
+  value="Four score and seven yeets ago..."
+  errors={["Fix the typo"]}
+/>
