--- a/lib/mbta_metro_web/live/demo.html.heex
+++ b/lib/mbta_metro_web/live/demo.html.heex
@@ -19,3 +19,18 @@
   value="Four score and seven yeets ago..."
   errors={["Fix the typo"]}
 />
+<hr /> Radio input group
+<.input_group type="radio" field={@form[:fruit]}>
+  <:input_item id="2" label="Apple orchard" value="apple" />
+  <:input_item id="3" label="Banana leaf" value="banana" />
+  <:input_item id="4" label="Coconut tree" value="coconut" />
+  <:input_item id="5" value="durian" />
+</.input_group>
+
+<hr /> Generic input group
+<.input_group type="checkbox" field={@form[:fruit]}>
+  <:input_item id="7" label="Apple orchard" value="apple" />
+  <:input_item id="8" label="Banana leaf" value="banana" checked />
+  <:input_item id="9" label="Coconut tree" value="coconut" />
+  <:input_item id="10" value="durian" />
+</.input_group>
