start of map component

--- a/lib/mbta_metro_web/layouts/root.html.heex
+++ b/lib/mbta_metro_web/layouts/root.html.heex
@@ -7,6 +7,7 @@
     <.live_title suffix=" · Phoenix Framework">
       <%= assigns[:page_title] || "Hello" %>
     </.live_title>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin=""/>
     <link rel="stylesheet" href={~p"/assets/app.css"} />
     <script defer type="text/javascript" src={~p"/assets/app.js"}>
     </script>
