--- a/lib/mbta_metro_web/live/demo.html.heex
+++ b/lib/mbta_metro_web/live/demo.html.heex
@@ -34,3 +34,5 @@
   <:input_item id="9" label="Coconut tree" value="coconut" />
   <:input_item id="10" value="durian" />
 </.input_group>
+
+<.live_component id="MapComponent" module={Map} />
