--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,1 +1,5 @@
-@import "../node_modules/mbta_metro/css/styles.css";
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
+
+@import "../node_modules/maplibre-gl/dist/maplibre-gl.css";
