--- a/lib/mbta_metro_web/layouts/root.html.heex
+++ b/lib/mbta_metro_web/layouts/root.html.heex
@@ -11,7 +11,7 @@
     <script defer type="text/javascript" src={~p"/assets/app.js"}>
     </script>
   </head>
-  <body class="bg-white antialiased">
+  <body class="bg-white antialiased mbta-metro-web">
     <%= @inner_content %>
   </body>
 </html>
