--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -3,3 +3,63 @@
 @import "tailwindcss/utilities";
 
 @import "../node_modules/maplibre-gl/dist/maplibre-gl.css";
+
+@layer base {
+  @font-face {
+    font-family: "InterThin";
+    font-weight: 100;
+    src: url("../fonts/Inter-Thin.ttf");
+  }
+
+  @font-face {
+    font-family: "InterExtraLight";
+    font-weight: 200;
+    src: url("../fonts/Inter-ExtraLight.ttf");
+  }
+
+  @font-face {
+    font-family: "InterLight";
+    font-weight: 300;
+    src: url("../fonts/Inter-Light.ttf");
+  }
+
+  @font-face {
+    font-family: "InterNormal";
+    font-weight: 400;
+    src: url("../fonts/Inter-Normal.ttf");
+  }
+
+  @font-face {
+    font-family: "InterMedium";
+    font-weight: 500;
+     src: url("../fonts/Inter-Medium.ttf");
+  }
+
+  @font-face {
+    font-family: "InterSemiBold";
+    font-weight: 600;
+    src: url("../fonts/Inter-SemiBold.ttf");
+  }
+
+  @font-face {
+    font-family: "InterBold";
+    font-weight: 700;
+    src: url("../fonts/Inter-Bold.ttf");
+  }
+
+  @font-face {
+    font-family: "InterExtraBold";
+    font-weight: 800;
+    src: url("../fonts/Inter-ExtraBold.ttf");
+  }
+
+  @font-face {
+    font-family: "InterBlack";
+    font-weight: 900;
+    src: url("../fonts/Inter-Black.ttf");
+  }
+}
+
+body {
+  font-family: "InterNormal", system-ui, sans-serif;
+}
