--- a/assets/css/storybook.css
+++ b/assets/css/storybook.css
@@ -1,9 +1,5 @@
 /* This is your custom storybook stylesheet. */
-@import "tailwindcss/base";
-@import "tailwindcss/components";
-@import "tailwindcss/utilities";
-
-@import "../node_modules/maplibre-gl/dist/maplibre-gl.css";
+@import "app.css";
 
 /*
  * Put your component styling within the Tailwind utilities layer. 
