--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -60,6 +60,8 @@
   }
 }
 
-body {
-  font-family: "InterNormal", system-ui, sans-serif;
+@layer utilities {
+  * {
+    font-family: "InterNormal", system-ui, sans-serif;
+  }
 }
