comment out map styles for now

--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -2,7 +2,7 @@
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 
-@import "../node_modules/maplibre-gl/dist/maplibre-gl.css";
+/* @import "../node_modules/maplibre-gl/dist/maplibre-gl.css"; */
 
 @layer base {
   @font-face {
