refactor: adjusted font handling
- don't generate Tailwind utility classes for font family
- update Inter CSS and font files from the official download, using woff2 as it's better for web

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,2 +1,6 @@
 @import "default.css";
 @import "components.css";
+
+.mbta-metro-web {
+  font-family: "Inter", 'Helvetica Neue', 'Helvetica', 'Arial', system-ui, sans-serif;
+}
