--- a/assets/css/inter.css
+++ b/assets/css/inter.css
@@ -8,7 +8,7 @@
   font-style: normal;
   font-weight: 100 900;
   font-display: swap;
-  src: url("/fonts/InterVariable.woff2") format("woff2");
+  src: url("../fonts/InterVariable.woff2") format("woff2");
 }
 
 @font-face {
@@ -16,7 +16,7 @@
   font-style: italic;
   font-weight: 100 900;
   font-display: swap;
-  src: url("/fonts/InterVariable-Italic.woff2") format("woff2");
+  src: url("../fonts/InterVariable-Italic.woff2") format("woff2");
 }
 
 /* static fonts */
@@ -25,7 +25,7 @@
   font-style: normal;
   font-weight: 100;
   font-display: swap;
-  src: url("/fonts/Inter-Thin.woff2") format("woff2");
+  src: url("../fonts/Inter-Thin.woff2") format("woff2");
 }
 
 @font-face {
@@ -33,7 +33,7 @@
   font-style: italic;
   font-weight: 100;
   font-display: swap;
-  src: url("/fonts/Inter-ThinItalic.woff2") format("woff2");
+  src: url("../fonts/Inter-ThinItalic.woff2") format("woff2");
 }
 
 @font-face {
@@ -41,7 +41,7 @@
   font-style: normal;
   font-weight: 200;
   font-display: swap;
-  src: url("/fonts/Inter-ExtraLight.woff2") format("woff2");
+  src: url("../fonts/Inter-ExtraLight.woff2") format("woff2");
 }
 
 @font-face {
@@ -49,7 +49,7 @@
   font-style: italic;
   font-weight: 200;
   font-display: swap;
-  src: url("/fonts/Inter-ExtraLightItalic.woff2") format("woff2");
+  src: url("../fonts/Inter-ExtraLightItalic.woff2") format("woff2");
 }
 
 @font-face {
@@ -57,7 +57,7 @@
   font-style: normal;
   font-weight: 300;
   font-display: swap;
-  src: url("/fonts/Inter-Light.woff2") format("woff2");
+  src: url("../fonts/Inter-Light.woff2") format("woff2");
 }
 
 @font-face {
@@ -65,7 +65,7 @@
   font-style: italic;
   font-weight: 300;
   font-display: swap;
-  src: url("/fonts/Inter-LightItalic.woff2") format("woff2");
+  src: url("../fonts/Inter-LightItalic.woff2") format("woff2");
 }
 
 @font-face {
@@ -73,7 +73,7 @@
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url("/fonts/Inter-Regular.woff2") format("woff2");
+  src: url("../fonts/Inter-Regular.woff2") format("woff2");
 }
 
 @font-face {
@@ -81,7 +81,7 @@
   font-style: italic;
   font-weight: 400;
   font-display: swap;
-  src: url("/fonts/Inter-Italic.woff2") format("woff2");
+  src: url("../fonts/Inter-Italic.woff2") format("woff2");
 }
 
 @font-face {
@@ -89,7 +89,7 @@
   font-style: normal;
   font-weight: 500;
   font-display: swap;
-  src: url("/fonts/Inter-Medium.woff2") format("woff2");
+  src: url("../fonts/Inter-Medium.woff2") format("woff2");
 }
 
 @font-face {
@@ -97,7 +97,7 @@
   font-style: italic;
   font-weight: 500;
   font-display: swap;
-  src: url("/fonts/Inter-MediumItalic.woff2") format("woff2");
+  src: url("../fonts/Inter-MediumItalic.woff2") format("woff2");
 }
 
 @font-face {
@@ -105,7 +105,7 @@
   font-style: normal;
   font-weight: 600;
   font-display: swap;
-  src: url("/fonts/Inter-SemiBold.woff2") format("woff2");
+  src: url("../fonts/Inter-SemiBold.woff2") format("woff2");
 }
 
 @font-face {
@@ -113,7 +113,7 @@
   font-style: italic;
   font-weight: 600;
   font-display: swap;
-  src: url("/fonts/Inter-SemiBoldItalic.woff2") format("woff2");
+  src: url("../fonts/Inter-SemiBoldItalic.woff2") format("woff2");
 }
 
 @font-face {
@@ -121,7 +121,7 @@
   font-style: normal;
   font-weight: 700;
   font-display: swap;
-  src: url("/fonts/Inter-Bold.woff2") format("woff2");
+  src: url("../fonts/Inter-Bold.woff2") format("woff2");
 }
 
 @font-face {
@@ -129,7 +129,7 @@
   font-style: italic;
   font-weight: 700;
   font-display: swap;
-  src: url("/fonts/Inter-BoldItalic.woff2") format("woff2");
+  src: url("../fonts/Inter-BoldItalic.woff2") format("woff2");
 }
 
 @font-face {
@@ -137,7 +137,7 @@
   font-style: normal;
   font-weight: 800;
   font-display: swap;
-  src: url("/fonts/Inter-ExtraBold.woff2") format("woff2");
+  src: url("../fonts/Inter-ExtraBold.woff2") format("woff2");
 }
 
 @font-face {
@@ -145,7 +145,7 @@
   font-style: italic;
   font-weight: 800;
   font-display: swap;
-  src: url("/fonts/Inter-ExtraBoldItalic.woff2") format("woff2");
+  src: url("../fonts/Inter-ExtraBoldItalic.woff2") format("woff2");
 }
 
 @font-face {
@@ -153,7 +153,7 @@
   font-style: normal;
   font-weight: 900;
   font-display: swap;
-  src: url("/fonts/Inter-Black.woff2") format("woff2");
+  src: url("../fonts/Inter-Black.woff2") format("woff2");
 }
 
 @font-face {
@@ -161,7 +161,7 @@
   font-style: italic;
   font-weight: 900;
   font-display: swap;
-  src: url("/fonts/Inter-BlackItalic.woff2") format("woff2");
+  src: url("../fonts/Inter-BlackItalic.woff2") format("woff2");
 }
 
 @font-face {
@@ -169,7 +169,7 @@
   font-style: normal;
   font-weight: 100;
   font-display: swap;
-  src: url("/fonts/InterDisplay-Thin.woff2") format("woff2");
+  src: url("../fonts/InterDisplay-Thin.woff2") format("woff2");
 }
 
 @font-face {
@@ -177,7 +177,7 @@
   font-style: italic;
   font-weight: 100;
   font-display: swap;
-  src: url("/fonts/InterDisplay-ThinItalic.woff2") format("woff2");
+  src: url("../fonts/InterDisplay-ThinItalic.woff2") format("woff2");
 }
 
 @font-face {
@@ -185,7 +185,7 @@
   font-style: normal;
   font-weight: 200;
   font-display: swap;
-  src: url("/fonts/InterDisplay-ExtraLight.woff2") format("woff2");
+  src: url("../fonts/InterDisplay-ExtraLight.woff2") format("woff2");
 }
 
 @font-face {
@@ -193,7 +193,7 @@
   font-style: italic;
   font-weight: 200;
   font-display: swap;
-  src: url("/fonts/InterDisplay-ExtraLightItalic.woff2") format("woff2");
+  src: url("../fonts/InterDisplay-ExtraLightItalic.woff2") format("woff2");
 }
 
 @font-face {
@@ -201,7 +201,7 @@
   font-style: normal;
   font-weight: 300;
   font-display: swap;
-  src: url("/fonts/InterDisplay-Light.woff2") format("woff2");
+  src: url("../fonts/InterDisplay-Light.woff2") format("woff2");
 }
 
 @font-face {
@@ -209,7 +209,7 @@
   font-style: italic;
   font-weight: 300;
   font-display: swap;
-  src: url("/fonts/InterDisplay-LightItalic.woff2") format("woff2");
+  src: url("../fonts/InterDisplay-LightItalic.woff2") format("woff2");
 }
 
 @font-face {
@@ -217,7 +217,7 @@
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url("/fonts/InterDisplay-Regular.woff2") format("woff2");
+  src: url("../fonts/InterDisplay-Regular.woff2") format("woff2");
 }
 
 @font-face {
@@ -225,7 +225,7 @@
   font-style: italic;
   font-weight: 400;
   font-display: swap;
-  src: url("/fonts/InterDisplay-Italic.woff2") format("woff2");
+  src: url("../fonts/InterDisplay-Italic.woff2") format("woff2");
 }
 
 @font-face {
@@ -233,7 +233,7 @@
   font-style: normal;
   font-weight: 500;
   font-display: swap;
-  src: url("/fonts/InterDisplay-Medium.woff2") format("woff2");
+  src: url("../fonts/InterDisplay-Medium.woff2") format("woff2");
 }
 
 @font-face {
@@ -241,7 +241,7 @@
   font-style: italic;
   font-weight: 500;
   font-display: swap;
-  src: url("/fonts/InterDisplay-MediumItalic.woff2") format("woff2");
+  src: url("../fonts/InterDisplay-MediumItalic.woff2") format("woff2");
 }
 
 @font-face {
@@ -249,7 +249,7 @@
   font-style: normal;
   font-weight: 600;
   font-display: swap;
-  src: url("/fonts/InterDisplay-SemiBold.woff2") format("woff2");
+  src: url("../fonts/InterDisplay-SemiBold.woff2") format("woff2");
 }
 
 @font-face {
@@ -257,7 +257,7 @@
   font-style: italic;
   font-weight: 600;
   font-display: swap;
-  src: url("/fonts/InterDisplay-SemiBoldItalic.woff2") format("woff2");
+  src: url("../fonts/InterDisplay-SemiBoldItalic.woff2") format("woff2");
 }
 
 @font-face {
@@ -265,7 +265,7 @@
   font-style: normal;
   font-weight: 700;
   font-display: swap;
-  src: url("/fonts/InterDisplay-Bold.woff2") format("woff2");
+  src: url("../fonts/InterDisplay-Bold.woff2") format("woff2");
 }
 
 @font-face {
@@ -273,7 +273,7 @@
   font-style: italic;
   font-weight: 700;
   font-display: swap;
-  src: url("/fonts/InterDisplay-BoldItalic.woff2") format("woff2");
+  src: url("../fonts/InterDisplay-BoldItalic.woff2") format("woff2");
 }
 
 @font-face {
@@ -281,7 +281,7 @@
   font-style: normal;
   font-weight: 800;
   font-display: swap;
-  src: url("/fonts/InterDisplay-ExtraBold.woff2") format("woff2");
+  src: url("../fonts/InterDisplay-ExtraBold.woff2") format("woff2");
 }
 
 @font-face {
@@ -289,7 +289,7 @@
   font-style: italic;
   font-weight: 800;
   font-display: swap;
-  src: url("/fonts/InterDisplay-ExtraBoldItalic.woff2") format("woff2");
+  src: url("../fonts/InterDisplay-ExtraBoldItalic.woff2") format("woff2");
 }
 
 @font-face {
@@ -297,7 +297,7 @@
   font-style: normal;
   font-weight: 900;
   font-display: swap;
-  src: url("/fonts/InterDisplay-Black.woff2") format("woff2");
+  src: url("../fonts/InterDisplay-Black.woff2") format("woff2");
 }
 
 @font-face {
@@ -305,5 +305,5 @@
   font-style: italic;
   font-weight: 900;
   font-display: swap;
-  src: url("/fonts/InterDisplay-BlackItalic.woff2") format("woff2");
+  src: url("../fonts/InterDisplay-BlackItalic.woff2") format("woff2");
 }
