import font family

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -2,5 +2,5 @@
 @import "components.css";
 
 .mbta-metro-web {
-  font-family: "Inter", 'Helvetica Neue', 'Helvetica', 'Arial', system-ui, sans-serif;
+  font-family: "Inter", "Helvetica Neue", "Helvetica", "Arial", system-ui, sans-serif;
 }
