add 50 color variants

--- a/assets/css/colors.css
+++ b/assets/css/colors.css
@@ -2,6 +2,7 @@
 :root {
   --white: #FFFFFF;
 
+  --blue-50: #E6ECF6;
   --blue-100: #CCD8ED;
   --blue-200: #99B1DB;
   --blue-300: #668BC9;
@@ -11,6 +12,7 @@
   --blue-700: #002B73;
   --blue-800: #001F53;
   --blue-900: #001231;
+  --green-50: #E6F3EC;
   --green-100: #CCE6D8;
   --green-200: #99CEB1;
   --green-300: #66B58B;
@@ -20,6 +22,7 @@
   --green-700: #004F25;
   --green-800: #003518;
   --green-900: #001A0C;
+  --orange-50: #FDF3E6;
   --orange-100: #FBE8CC;
   --orange-200: #F8D199;
   --orange-300: #F4B966;
@@ -29,6 +32,7 @@
   --orange-700: #8E5300;
   --orange-800: #5F3800;
   --orange-900: #2F1C00;
+  --purple-50: #F2E9F0;
   --purple-100: #E6D4E2;
   --purple-200: #CCA9C4;
   --purple-300: #B37DA7;
@@ -38,6 +42,7 @@
   --purple-700: #4D1741;
   --purple-800: #33102B;
   --purple-900: #1A0816;
+  --red-50: #FBEAE8;
   --red-100: #F8D4D2;
   --red-200: #F0A9A4;
   --red-300: #E97F77;
@@ -47,6 +52,7 @@
   --red-700: #831911;
   --red-800: #57100B;
   --red-900: #2C0806;
+  --silver-50: #F2F3F4;
   --silver-100: #E5E7E8;
   --silver-200: #CBCFD2;
   --silver-300: #B0B7BB;
@@ -56,6 +62,7 @@
   --silver-700: #4A5155;
   --silver-800: #323639;
   --silver-900: #191B1C;
+  --yellow-50: #FFF9EA;
   --yellow-100: #FFF4D5;
   --yellow-200: #FFE9AB;
   --yellow-300: #FFDD80;
