--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -1,3 +1,6 @@
+@import "@mbta/rider-design-system/dist/variables.light.css" (prefers-color-scheme: light);
+@import "@mbta/rider-design-system/dist/variables.dark.css" (prefers-color-scheme: dark);
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
