--- a/lib/mbta_metro_web/layouts/root.html.heex
+++ b/lib/mbta_metro_web/layouts/root.html.heex
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="csrf-token" content={get_csrf_token()} />
     <.live_title suffix=" · Phoenix Framework">
-      <%= assigns[:page_title] || "Hello" %>
+      {assigns[:page_title] || "Hello"}
     </.live_title>
     <link rel="stylesheet" href={~p"/assets/app.css"} />
   </head>
   <body class="bg-white antialiased mbta-metro-web">
-    <%= @inner_content %>
+    {@inner_content}
   </body>
 </html>
