--- a/assets/css/metro.css
+++ b/assets/css/metro.css
@@ -2,4 +2,4 @@
 @import "../../priv/design-system/variables.light.css";
 @import "../../priv/design-system/variables.dark.css";
 @import "./base.css";
-@import "./components.css" layer(components);
+@import "./components.css";
