--- a/assets/css/storybook.css
+++ b/assets/css/storybook.css
@@ -1,5 +1,9 @@
 @import "../../priv/dist/metro.css";
 
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 .mbta-metro-web {
   background-color: var(--background-primary);
   color: var(--text-primary);
