refactor: separate metro vs storybook workflows

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -1,10 +1,11 @@
+@config "./../tailwind.config.js";
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 @layer base {
   :root {
-    font-family: "Inter", sans-serif;
+    font-family: var(--font-family-base);
   }
 
   @supports (font-variation-settings: normal) {
