chore: remove unneeded things

--- a/lib/mbta_metro_web/layouts/root.html.heex
+++ b/lib/mbta_metro_web/layouts/root.html.heex
@@ -7,9 +7,8 @@
     <.live_title suffix=" · Phoenix Framework">
       {assigns[:page_title] || "Hello"}
     </.live_title>
-    <link rel="stylesheet" href={~p"/assets/app.css"} />
   </head>
-  <body class="bg-white antialiased mbta-metro-web">
+  <body>
     {@inner_content}
   </body>
 </html>
