--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -319,4 +319,42 @@
     font-display: swap;
     src: url("../fonts/InterDisplay-BlackItalic.woff2") format("woff2");
   }
+
+  /* remove default caret in Safari */
+  details > summary::-webkit-details-marker {
+    display: none;
+  }
+
+  /* the styles from the @tailwindcss/forms plugin aren't customizable, (see https://github.com/tailwindlabs/tailwindcss/discussions/4645 for discussion on custom ring color), yet are also too specific and can override other classes... so we override them as suggested by  https://github.com/tailwindlabs/tailwindcss/discussions/4649#discussioncomment-8714473 */
+  [type="text"],
+  input:where(:not([type])),
+  [type="email"],
+  [type="url"],
+  [type="password"],
+  [type="number"],
+  [type="date"],
+  [type="datetime-local"],
+  [type="month"],
+  [type="search"],
+  [type="tel"],
+  [type="time"],
+  [type="week"],
+  [type="checkbox"],
+  [type="radio"],
+  [multiple],
+  textarea,
+  select {
+    background-color: theme("colors.white");
+    border-color: theme("colors.cobalt.30");
+    border-radius: theme("borderRadius.DEFAULT");
+    border-width: theme("borderWidth.DEFAULT");
+    color: theme("colors.cobalt.30");
+
+    &:focus {
+      --tw-ring-color: theme("colors.cobalt.60");
+      --tw-ring-offset-color: transparent;
+      --tw-ring-offset-width: 4px;
+      border-color: theme("colors.cobalt.30");
+    }
+  }
 }
