--- a/assets/css/components.css
+++ b/assets/css/components.css
@@ -1,3 +1,16 @@
+@import "components/accordion.css";
+@import "components/badge.css";
+@import "components/button.css";
+@import "components/data_list.css";
 @import "components/date_picker.css";
+@import "components/feedback.css";
+@import "components/flash.css";
+@import "components/input.css";
+@import "components/js.css";
 @import "components/map.css";
+@import "components/list.css";
+@import "components/modal.css";
+@import "components/progress.css";
 @import "components/spinner.css";
+@import "components/system.css";
+@import "components/table.css";
