--- a/assets/css/components/spinner.css
+++ b/assets/css/components/spinner.css
@@ -1,29 +1,49 @@
-.mbta-metro-spinner {
-    border-radius: 50%;
-    position: relative;
-    animation: rotate 1s linear infinite
-  }
-  
-  .mbta-metro-spinner::before , .mbta-metro-spinner::after {
-    content: "";
-    box-sizing: border-box;
-    position: absolute;
-    inset: 0px;
-    border-radius: 50%;
-    animation: prixClipFix 2s linear infinite ;
-  }
+.mbta-spinner {
+  border-radius: 50%;
+  position: relative;
+  animation: rotate 1s linear infinite;
+  height: var(--spacing-8);
+  width: var(--spacing-8);
+}
 
-  .mbta-metro-spinner::after{
-    transform: rotate3d(90, 90, 0, 180deg );
-  }
+.mbta-spinner::before,
+.mbta-spinner::after {
+  content: "";
+  box-sizing: border-box;
+  position: absolute;
+  inset: 0px;
+  border-radius: 50%;
+  border-width: 4px;
+  animation: prixClipFix 2s linear infinite;
+}
 
-  @keyframes rotate {
-    0%   {transform: rotate(0deg)}
-    100%   {transform: rotate(360deg)}
-  }
+.mbta-spinner::after {
+  border-color: var(--colors-cobalt-40);
+  transform: rotate3d(90, 90, 0, 180deg);
+}
 
-  @keyframes prixClipFix {
-      0%   {clip-path:polygon(50% 50%,0 0,0 0,0 0,0 0,0 0)}
-      50%  {clip-path:polygon(50% 50%,0 0,100% 0,100% 0,100% 0,100% 0)}
-      75%, 100%  {clip-path:polygon(50% 50%,0 0,100% 0,100% 100%,100% 100%,100% 100%)}
+.mbta-spinner::before {
+  border-color: var(--colors-cobalt-70);
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg);
   }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes prixClipFix {
+  0% {
+    clip-path: polygon(50% 50%, 0 0, 0 0, 0 0, 0 0, 0 0);
+  }
+  50% {
+    clip-path: polygon(50% 50%, 0 0, 100% 0, 100% 0, 100% 0, 100% 0);
+  }
+  75%,
+  100% {
+    clip-path: polygon(50% 50%, 0 0, 100% 0, 100% 100%, 100% 100%, 100% 100%);
+  }
+}
