--- a/assets/css/components/accordion.css
+++ b/assets/css/components/accordion.css
@@ -4,27 +4,11 @@ details.mbta-accordion--multiselect {
   width: 100%;
 
   summary {
-    align-items: center;
-    border-color: var(--colors-cobalt-30);
-    border-radius: var(--border-radius-default);
-    border-width: var(--border-width-default);
+    color: var(--colors-text-primary);
     cursor: pointer;
-    display: flex;
-    gap: var(--spacing-sm);
-    padding-block: var(--spacing-sm);
-    padding-inline: var(--spacing-md);
+    padding-right: 3rem;
     position: relative;
-
-    &:hover {
-      border-color: var(--colors-cobalt-80);
-    }
-
-    &:focus {
-      border-color: var(--colors-cobalt-20);
-      box-shadow:
-        0 0 0 4px var(--colors-cobalt-60),
-        0 0 #0000;
-    }
+    width: 100%;
 
     svg.mbta-accordion-arrow {
       height: var(--spacing-4);
@@ -35,8 +19,8 @@ details.mbta-accordion--multiselect {
     }
   }
 
-  summary + div {
-    border-color: var(--colors-cobalt-30);
+  summary+div {
+    border-color: var(--button-secondary-default-border-color);
     border-width: var(--border-width-default);
     padding-block: var(--spacing-sm);
     padding-inline: var(--spacing-md);
@@ -79,7 +63,7 @@ details.mbta-accordion {
     }
   }
 
-  summary + div {
+  summary+div {
     border-color: var(--colors-charcoal-70);
     border-top-width: var(--border-width-default);
     padding-block: var(--spacing-sm);
