--- a/assets/css/components/input.css
+++ b/assets/css/components/input.css
@@ -32,13 +32,13 @@ select.mbta-input {
   background-position: right 0.5rem center;
   background-repeat: no-repeat;
   background-size: 1.5em 1.5em;
-  padding: var(--spacing-sm) var(--spacing-2xl) var(--spacing-sm)
-    var(--spacing-md);
+  padding: var(--spacing-sm) var(--spacing-2xl) var(--spacing-sm) var(--spacing-md);
 }
 
 textarea.mbta-input {
   padding: var(--spacing-sm) var(--spacing-md);
 }
+
 input[type="radio"].mbta-input {
   border-radius: var(--border-radius-full);
 }
@@ -50,6 +50,7 @@ input[type="radio"].mbta-input:checked {
   background-position: center;
   background-repeat: no-repeat;
 }
+
 input[type="checkbox"].mbta-input:checked {
   background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 16 16' fill='white' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M12.207 4.793a1 1 0 010 1.414l-5 5a1 1 0 01-1.414 0l-2-2a1 1 0 011.414-1.414L6.5 9.086l4.293-4.293a1 1 0 011.414 0z'/%3e%3c/svg%3e");
   background-color: var(--colors-action-primary-default);
@@ -81,15 +82,21 @@ input[type="radio"].mbta-input {
 }
 
 fieldset.mbta-input-group {
+  &:has(.mbta-input-group--buttons),
+  .mbta-input-group--buttons {
+    width: 100%;
+  }
+
   .mbta-input-group--buttons input {
     position: absolute;
-    clip: rect(0,0,0,0);
+    clip: rect(0, 0, 0, 0);
     pointer-events: none;
   }
 
   .mbta-button {
     cursor: pointer;
     display: inline-flex;
+    justify-content: center;
     font-weight: 400;
     text-wrap: nowrap;
 
@@ -101,6 +108,7 @@ fieldset.mbta-input-group {
 
   .mbta-button:has(:checked) {
     background-color: var(--button-secondary-hover-background-color);
+    color: var(--button-secondary-hover-text-color);
   }
 
   .mbta-input-group--buttons {
@@ -122,7 +130,7 @@ fieldset.mbta-input-group {
       border-inline-width: 2px;
       border-radius: 0;
 
-      + & {
+      +& {
         border-left-width: 0px;
       }
     }
