--- a/assets/css/components/date_picker.css
+++ b/assets/css/components/date_picker.css
@@ -1,19 +1,5 @@
 @import "../../node_modules/flatpickr/dist/flatpickr.min.css";
 
-.flatpickr {
-  position: relative;
-
-  .form-control[readonly] {
-    background-color: var(--colors-white);
-  }
-
-  &~a[data-toggle] {
-    position: absolute;
-    right: .75rem;
-    top: .5rem;
-  }
-}
-
 .flatpickr-mobile {
   border: 1px solid var(--colors-cobalt-30);
   border-radius: .25rem;
@@ -67,5 +53,44 @@
     background-color: var(--colors-cobalt-90);
     border-color: var(--colors-white);
     color: var(--colors-cobalt-30);
+  }
+}
+
+.mbta-date-picker {
+  .mbta-date-picker--input {
+    position: relative;
+
+    a[data-toggle] {
+      position: absolute;
+      right: var(--spacing-4);
+      top: calc(var(--spacing-3) + 1px);
+    }
+
+    .mbta-input {
+      padding-right: 2rem;
+      width: 100%;
+      min-width: 16.875rem;
+
+      &.form-control[readonly] {
+        background-color: var(--colors-white);
+      }
+    }
+  }
+
+  .mbta-date-picker--icon {
+    fill: var(--colors-action-primary-default);
+    height: var(--spacing-4);
+    width: var(--spacing-4);
+  }
+}
+
+.mbta-date-picker--error {
+  .mbta-date-picker--icon {
+    fill: var(--colors-error-default-foreground);
+  }
+
+  .mbta-input {
+    border-color: var(--colors-error-default-foreground);
+    color: var(--colors-error-default-foreground);
   }
 }
