--- a/assets/css/components/map.css
+++ b/assets/css/components/map.css
@@ -1,1 +1,19 @@
 @import "../../node_modules/maplibre-gl/dist/maplibre-gl.css";
+
+.mbta-metro-map-wrapper {
+  height: 100%;
+}
+
+.mbta-metro-map svg {
+  fill: var(--colors-cobalt-30);
+}
+
+.mbta-metro-map-pin {
+  width: 4rem;
+  height: 4rem;
+}
+
+.mbta-metro-map-point {
+  width: 1rem;
+  height: 1rem;
+}
