refactor: extract route utility CSS

--- a/assets/css/metro.css
+++ b/assets/css/metro.css
@@ -3,6 +3,7 @@
 @import "./variables.dark.css";
 @import "./base.css";
 @import "./components.css";
+@import "./utilities.css";
 
 .sr-only {
   position: absolute;
