fix(Accordion): don't rotate arrow icon

--- a/assets/css/components/accordion.css
+++ b/assets/css/components/accordion.css
@@ -27,7 +27,7 @@ details.mbta-accordion--multiselect {
   }
 
   &[open] {
-    svg {
+    svg.mbta-accordion-arrow {
       transform: rotate(0.5turn);
     }
 
