--- a/assets/css/components/button.css
+++ b/assets/css/components/button.css
@@ -1,27 +1,25 @@
 .mbta-button {
   align-items: center;
-  border-radius: var(--border-radius-md);
-  border-width: var(--border-width-sm);
+  border-radius: var(--border-radius-default);
+  border-width: var(--border-width-default);
   column-gap: var(--spacing-sm);
   display: inline-flex;
   font-family: var(--font-family-base);
   font-size: var(--font-size-default);
   font-weight: 500;
+  line-height: var(--line-height-default);
   padding-bottom: var(--spacing-sm);
   padding-top: var(--spacing-sm);
-  padding-left: var(--spacing-md);
-  padding-right: var(--spacing-md);
-  transition: all var(--transition-duration-default) ease;
+  padding-left: var(--spacing-default);
+  padding-right: var(--spacing-default);
+  transition: background-color var(--transition-duration) ease;
 
   &[aria-disabled] {
-    background-color: var(--colors-charcoal-30);
-    border-color: var(--colors-charcoal-30);
-    color: var(--colors-white);
     cursor: not-allowed;
   }
   &:focus,
   &:focus-within {
-    outline: var(--spacing-xs) solid var(--colors-cobalt-60);
+    outline: var(--spacing-xs) solid var(--colors-focus);
     outline-offset: 0;
   }
 }
@@ -62,5 +60,23 @@
     background-color: var(--button-secondary-active-background-color);
     border-color: var(--button-secondary-active-border-color);
     color: var(--button-secondary-active-text-color);
+  }
+}
+
+.mbta-button-tertiary {
+  background-color: var(--button-tertiary-default-background-color);
+  border-color: var(--button-tertiary-default-border-color);
+  color: var(--button-tertiary-default-text-color);
+
+  &:hover {
+    background-color: var(--button-tertiary-hover-background-color);
+    border-color: var(--button-tertiary-hover-border-color);
+    color: var(--button-tertiary-hover-text-color);
+  }
+
+  &:active {
+    background-color: var(--button-tertiary-active-background-color);
+    border-color: var(--button-tertiary-active-border-color);
+    color: var(--button-tertiary-active-text-color);
   }
 }
