--- a/assets/css/metro.css
+++ b/assets/css/metro.css
@@ -2,6 +2,7 @@
 @import "./variables.light.css";
 @import "./variables.dark.css";
 @import "./base.css";
+@import "./typography.css";
 @import "./components.css";
 @import "./utilities.css";
 
