feat(input): display required label if the attribute is set

--- a/assets/css/components/input.css
+++ b/assets/css/components/input.css
@@ -135,3 +135,9 @@ fieldset.mbta-input-group {
     }
   }
 }
+
+.mbta-label--required {
+  font-weight: 400;
+  display: inline-block;
+  margin-left: var(--spacing-sm);
+}
