--- a/assets/css/storybook.css
+++ b/assets/css/storybook.css
@@ -12,13 +12,13 @@
   font-family: var(--font-family-base);
 }
 
-.mbta-metro-web a {
+.mbta-metro-web a:not([class^="mbta-"]) {
   color: var(--colors-action-primary-default);
   font-weight: 500;
   text-decoration: underline;
 }
 
-.mbta-metro-web p {
+.mbta-metro-web p:not([class^="mbta-"]) {
   margin-block: var(--spacing-md);
 }
 
